--- a/main.tex
+++ b/main.tex
@@ -1343,6 +1343,8 @@ Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah M. Private communication (December 2018).
 
+%\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+
 %\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
 
 \end{thebibliography}
