--- a/main.tex
+++ b/main.tex
@@ -963,10 +963,10 @@ ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the mu
 (0.5 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5 and 17 ppm):
 \begin{equation}
-r_{e}/lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{prime}r_e)^3 
+r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 
 \end{equation}
 
-With the above $\mu$ value, it gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
+With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
 \begin{array}{ll}
 %
