--- a/main.tex
+++ b/main.tex
@@ -811,11 +811,11 @@ The ppb range precision of the last term means clearly that a rationalisation of
 
 Note that, in Eq. (40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
 \begin{equation}
-O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2}
+O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx sqrt{2}(e496^2)^15
 \end{equation}
-where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
+confirming the central role of 496. Note also that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
-From the Eqs (37), (41) and (43), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
+From the Eqs (37), (41) and (44), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
