--- a/main.tex
+++ b/main.tex
@@ -961,10 +961,7 @@ ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the mu
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi (apH)^{1/4}
 \end{equation}
 (0.5 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5 and 17 ppm):
-\begin{equation}
-r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 
-\end{equation}
+mass ratio at an epoch during which its measurement was false to 3 $\sigma$.
 
 With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
@@ -976,7 +973,16 @@ F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \appro
 \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
+(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. 
+
+ With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
+\begin{equation}
+r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 \approx (es)^{15}/p^2  
+\end{equation}
+confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.)
+
+
+The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
 
 Moreover $\tau$ correlates with the
