--- a/main.tex
+++ b/main.tex
@@ -968,18 +968,17 @@ $$
 \begin{array}{ll}
 %
 \displaystyle
-F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 \\
-\approx \Pi_{par}^{1/20}
-\approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
+F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. 
+(0.7 ppm, 0.3 \%, 0.1 \%. This shows that Cosmos uses the rationalisation 137/50 for $e$. Moreover the $20{th}$ power of this Tifft term $F/137$ is tied to the product $Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
+$$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
 \begin{equation}
 r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 \approx (es)^{15}/p^2  
 \end{equation}
-confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.)
+confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(44))
 
 
 The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
