--- a/main.tex
+++ b/main.tex
@@ -971,7 +971,7 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%. This shows that Cosmos uses the rationalisation 137/50 for $e$. Moreover the $20{th}$ power of this Tifft term $F/137$ is tied to the product $Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
+(0.7 ppm, 0.3 \%, 0.1 \%. This shows that Cosmos uses the rationalisation 137/50 for $e$. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
