--- a/main.tex
+++ b/main.tex
@@ -1000,10 +1000,10 @@ W \approx \gamma a 137^{2} / 3\pi d_{e}
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-Considering the above values, the relation
-\begin{equation}
-R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
-\end{equation}
+Considering the above values, Eq (1) 
+%%\begin{equation}
+%%R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
+%%\end{equation}
 matches the above $G$ value in the ppb range.
 
 \subsection {The Gravitational Constant fine-tuning}
