--- a/main.tex
+++ b/main.tex
@@ -924,20 +924,6 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The electroweak constant mathematical fine tuning}
-
-The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. One ought to look for the relation involving $a$, 137, $a_{w}$ and the mathematical constants. One
-immediately gets:
-\begin{equation}
-a_{w} \approx (2\gamma 137 a/\pi)^{3}
-\end{equation}
-Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
-a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
-\begin{equation}
-\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
-\end{equation}
-see below how this formulae simplifies again by using the Atiyah Constant.
 
 \subsection {The Muon and Tau fine tuning}
 
@@ -991,9 +977,10 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
 
-\subsection {The Intermediate Bosons mathematical fine tuning}
-
-The computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
+%%\subsection {The Intermediate Bosons mathematical fine tuning}
+\subsection {The electroweak constant mathematical fine tuning}
+The Particle standard model achieved the unification between electromagnetism and weak
+nuclear force. Looking for relations involving $a$, 137, $a_{w}$, the intermediate bosons $W$ et $Z$ and the mathematical constants, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
 \begin{equation}
 W \approx \gamma a 137^{2} / 3\pi d_{e}
 \end{equation}
@@ -1004,7 +991,17 @@ Considering the above values, Eq (1)
 %%\begin{equation}
 %%R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
 %%\end{equation}
-matches the above $G$ value in the ppb range.
+matches the above $G$ value in the ppb range. Moreover:
+\begin{equation}
+a_{w} \approx (2\gamma 137 a/\pi)^{3}
+\end{equation}
+Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
+a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
+\begin{equation}
+\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
+\end{equation}
+see below how this formulae simplifies again by using the Atiyah Constant.
+
 
 \subsection {The Gravitational Constant fine-tuning}
 
