--- a/main.tex
+++ b/main.tex
@@ -924,6 +924,30 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
+\subsection {The electroweak constant mathematical fine tuning}
+The Particle standard model achieved the unification between electromagnetism and weak
+nuclear force. Looking for relations involving $a$, 137, $a_{w}$, the intermediate bosons $W$ et $Z$ and the mathematical constants, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
+\begin{equation}
+W \approx \gamma a 137^{2} / 3\pi d_{e}
+\end{equation}
+\begin{equation}
+Z \approx ap^{2} \pi^{4} / 137 d_{e} n
+\end{equation}
+Considering the above values, Eq (1) 
+%%\begin{equation}
+%%R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
+%%\end{equation}
+matches the above $G$ value in the ppb range. Moreover:
+\begin{equation}
+a_{w} \approx (2\gamma 137 a/\pi)^{3}
+\end{equation}
+Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
+a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
+\begin{equation}
+\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
+\end{equation}
+see below how this formulae simplifies again by using the Atiyah Constant.
+
 
 \subsection {The Muon and Tau fine tuning}
 
@@ -944,10 +968,11 @@ This yields to a muon relative to electron mass ratio
 \end{equation} within its 20 ppb measurement range.
 ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
-(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi (apH)^{1/4}
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-(0.5 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-mass ratio at an epoch during which its measurement was false to 3 $\sigma$.
+which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
+mass ratio at an epoch during which its measurement was false to 3 $\sigma$. Now the Koide constant p_K verifies (0.5ppm, 40 ppb):
+$$ p_K \approx 4\pi (apH)^{1/4} \approx (pH)^{1/2} (137a/136(a^{\prime}-1)^{1/4} d_e $$
 
 With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
@@ -978,29 +1003,6 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
 
 %%\subsection {The Intermediate Bosons mathematical fine tuning}
-\subsection {The electroweak constant mathematical fine tuning}
-The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. Looking for relations involving $a$, 137, $a_{w}$, the intermediate bosons $W$ et $Z$ and the mathematical constants, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
-\begin{equation}
-W \approx \gamma a 137^{2} / 3\pi d_{e}
-\end{equation}
-\begin{equation}
-Z \approx ap^{2} \pi^{4} / 137 d_{e} n
-\end{equation}
-Considering the above values, Eq (1) 
-%%\begin{equation}
-%%R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
-%%\end{equation}
-matches the above $G$ value in the ppb range. Moreover:
-\begin{equation}
-a_{w} \approx (2\gamma 137 a/\pi)^{3}
-\end{equation}
-Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
-a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
-\begin{equation}
-\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
-\end{equation}
-see below how this formulae simplifies again by using the Atiyah Constant.
 
 
 \subsection {The Gravitational Constant fine-tuning}
