--- a/main.tex
+++ b/main.tex
@@ -971,7 +971,7 @@ ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the mu
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-mass ratio at an epoch during which its measurement was false to 3 $\sigma$. Now the Koide constant $p$_K verifies (0.5ppm, 40 ppb):
+mass ratio at an epoch during which its measurement was false to 3 $\sigma$. Now the Koide constant $p_K$ verifies (0.5ppm, 40 ppb):
 $$ p_K \approx 4\pi (apH)^{1/4} \approx (pH)^{1/2} (137a/136(a^{\prime}-1)^{1/4} d_e $$
 
 With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
