--- a/main.tex
+++ b/main.tex
@@ -889,7 +889,8 @@ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appea
 Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
-Since $R/\lambdabar_e \approx 2^128$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tacyonic celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$. This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It an ewample of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out.
+Since $R/\lambdabar_e \approx 2^128$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tacyonic celerity ratio (0.01\%) 
+$$ C/c\approx3^{128} \(p_K/p_G \delta)^2$$. This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It an ewample of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out.
 Elimination of $q$ leads to (2.6 \%):
 $$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
  In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
@@ -897,7 +898,7 @@ $$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
 a \approx 44\pi - Arccos(1/e)
 \end{equation}
 a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ is close to the canonic $R_{GC}/\lambdabar_e$. The study of deviation leads to (0.14 ppm):
-$$w^{e^w} p/\sqrt2 \approx 2^{64\times5} (6\pi^5)^2$$
+$$w^{e^w} p/\sqrt2 \approx 2^{64\times5} p_0^2$$
 This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. This confirms the above Rationalisation Hypothesis concerning the origin of the Cosmos vastness, namely
 that a rational approximation for $\pi$ is a intermediate calculation basis. 
 
