--- a/main.tex
+++ b/main.tex
@@ -897,10 +897,9 @@ $$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
 \begin{equation}
 a \approx 44\pi - Arccos(1/e)
 \end{equation}
-a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ is close to the canonic $R_{GC}/\lambdabar_e$. The study of deviation leads to (0.14 ppm):
-$$w^{e^w} p/\sqrt2 \approx 2^{64\times5} p_0^2$$
-This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the fractional development 3, 7, 16, -218. This confirms the above Rationalisation Hypothesis concerning the origin of the Cosmos vastness, namely
-that a rational approximation for $\pi$ is a intermediate calculation basis. 
+a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ enters (1 ppm):
+$$w^{e^w+1} \approx \sqrt{ad\sqrt{n/p}}R_{GC}/\lambdabar_e $$
+This confirms that the Planck thermal law will play a central importance in the future fundamental theory. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
