--- a/main.tex
+++ b/main.tex
@@ -737,11 +737,11 @@ where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
-The central term $F^3/a$ exhibits another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
+Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen radius $a^{\prime} = aH/p$, to 0.3ppm and 0.3 \%:
 \begin{equation}
-F^3/a \approx (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
+\sqrt{\beta} F^3/a^{\prime} \approx (e/3)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \end{equation}
-confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e. they are, according to the Holic Principle, privileged exponents.
+confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e., as privileged exponents. This call for further study.
 
 \subsection{Ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
