--- a/main.tex
+++ b/main.tex
@@ -1233,10 +1233,8 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{Sanchez1} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biology. Springer
-International Publishing AG. Quantum Systems in
-Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
-30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.
+\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011 (2017) 
+Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
 
