--- a/main.tex
+++ b/main.tex
@@ -746,9 +746,9 @@ confirming that $j$ and $\Gamma$ has the status of invariant generalised dimensi
 \subsection{Ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
+From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in theb Eddington matrix, it must be interpreted as a dimension, a privilegied exponent. \textit{So the term $a^a$ must be central}.
     
-Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of e \cite{Sanchez1}. Thus it seems interesting here to find its manifestations in classical mathematics. 
+Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Thus it seems interesting here to look for its manifestations in classical mathematics. 
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, which entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
