--- a/main.tex
+++ b/main.tex
@@ -748,7 +748,12 @@ confirming that $j$ and $\Gamma$ has the status of invariant generalised dimensi
 
 From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in theb Eddington matrix, it must be interpreted as a dimension, a privilegied exponent. \textit{So the term $a^a$ must be central}.
     
-Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Thus it seems interesting here to look for its manifestations in classical mathematics. 
+Indeed, $a^a$, apart a $\pi$ factor, in the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.04 \%:
+\begin{equation}
+(4\pi/3)(R_{GC}/r_H)^3 \approx a^a/\pi \approx (1/ln2)^{1836.5}
+\end{equation}
+Note that the ln2 factor involves information theory.
+Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Thus it seems interesting here to look for its manifestations in classical mathematics. 
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, which entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
@@ -1233,7 +1238,7 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011 (2017) 
+\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). 
 Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
