--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. 
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (visible Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. 
 %An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the %Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter %existence. 
 %The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle %period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to %the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying %the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by %the cosmic microwave Grandcosmos radiation. 
 The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
@@ -85,7 +85,7 @@ The existence of relations that are not explained by known physical theories, is
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
+The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
 \textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
@@ -93,12 +93,12 @@ The present article shows that \textit{Physics is an unique part of Mathematics,
 
 The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liason with the above Hierarchy Principle.
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Hierarchy Principle.
 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$. 
 
 
 
@@ -107,25 +107,25 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
-periodicity 8 [19] which is at the origin of the name `topological axis`. 
+periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
     is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
     tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
-    dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
+    dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
     the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
     the Grandcosmos radius.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring $n = 10$, it is the Pion. For $k \approx \pi$, $n \approx \gamma \times \Gamma$, $Y \approx 496^2$ 
+    For the superstring n = 10, it is the Pion. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
-    the Brout-Englert-Higgs boson (125 GeV). For $k \approx 2e^e$, it is the Topon, the visible Universe wavelength,
+    the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
-   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while $n \approx \Gamma$, 
+   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while  n $\approx \Gamma$, 
     to the graviton mass.
     \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
-    The central dimension is $n = 16$, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
+    The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
 
