--- a/main.tex
+++ b/main.tex
@@ -130,7 +130,7 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
 \end{figure*}
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
-We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -148,8 +148,7 @@ So, \textit{the speed $c$ is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
 
-Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ . This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to n $\approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
+Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
@@ -178,7 +177,7 @@ R/r_H \approx (4\pi \lambda_{CMB} /r)^{4}
 $ 
 precise to $0.6\%$. 
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$.
 The appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce \cite{Sanchez2}.
@@ -192,7 +191,7 @@ R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 4, by intervention of canonical mathematical constants.
 
 The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation,
-which is the simplest case of Eddington's statistical theory \cite{Eddy}. The position of a `reference particle`
+which is the simplest case of Eddington's statistical theory \cite{Eddy}: the position of a `reference particle`
 is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
@@ -202,25 +201,25 @@ R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddy}.
 
-Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
+Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
 for a star containing $N_s$ atoms, in which the pressure has reached the quantum degenerancy value
-(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$.
-So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
+(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$
+\cite{Sanchez1}.So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
 the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was
 aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
 Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that Lemaitre and Hubble considered galaxies of the Local
+The reason for this discrepancy is that Lema\^itre and Hubble considered galaxies of the Local
 Group, which do not participate the so-called space expansion. In fact, it is sufficient to introduce a
-repulsive force proportional to separation distance, for explaination of the canonical
+repulsive force proportional to separation distance, for explaination of the steady-state
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent
 to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
 
 The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological
-Axis, to the Atiyah Constant $\Gamma$, presented in the Section 4, see Fig 1.
+Axis, to the Atiyah Constant $\Gamma$, presented in the Section3. 4, see Fig 1.
 
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
