--- a/main.tex
+++ b/main.tex
@@ -618,6 +618,56 @@ where the above Tifft factor $F/a$ appears. The implication of the time
 $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
+
+
+\section{The Arithmetical Logic: Holic Principle}
+
+In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
+simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
+prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+
+This is the degenerate arithmetic form of the spatio-temporal holographic principle.
+
+This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
+Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
+suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
+dimension n = 30, the natural extension of the above:
+\begin{equation}
+T^{2} = L^{3} = M^{5} = N^{30}
+\end{equation}
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchtone of the Topological axis, from which gauge bosons are deduced by Cartan-Bott reductions [19] (Fig. 1)
+
+This is called the Holic Principle, relating to the apparent world. The Complete Holic
+Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
+$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
+where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 4.1).
+
+
+
+
+\section{Special holographic relations}
+
+\subsection{The Conservation of Information}
+
+The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
+relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
+\begin{equation}
+4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
+\end{equation}
+Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
+thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
+connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
+argument in favor of a total conservation of information was tied to a non-evolution cosmology
+\cite{Nikolic}, Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
+Physics are very similar \cite{Sanchez1}. 
+
+Note that $e^{a}$ is also compatible with the half volume of the proton, with
+the Planck length as unit.
+
+So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
+Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
+relations would be only Fourier transform manifestations of Wave Mechanics.
+
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \subsection{The Eddington's constant 137}
@@ -658,52 +708,6 @@ proving that the base 3, \textit{the optimal whole number basis}, is also used b
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150} $$
 Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddy}.
-
-\subsection{The Arithmetical Logic: Holic Principle}
-
-In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
-simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
-
-This is the degenerate arithmetic form of the spatio-temporal holographic principle.
-
-This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
-Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
-suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
-dimension n = 30, the natural extension of the above:
-\begin{equation}
-T^{2} = L^{3} = M^{5} = N^{30}
-\end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchtone of the Topological axis, from which gauge bosons are deduced by Cartan-Bott reductions [19] (Fig. 1)
-
-This is called the Holic Principle, relating to the apparent world. The Complete Holic
-Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
-$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 4.1).
-
-
-\subsection{The Conservation of Information}
-
-The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
-\begin{equation}
-4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
-\end{equation}
-Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
-thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
-connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
-argument in favor of a total conservation of information was tied to a non-evolution cosmology
-\cite{Nikolic}, Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
-Physics are very similar \cite{Sanchez1}. 
-
-Note that $e^{a}$ is also compatible with the half volume of the proton, with
-the Planck length as unit.
-
-So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
-Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
-relations would be only Fourier transform manifestations of Wave Mechanics.
-
-
 \subsection{Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
