--- a/main.tex
+++ b/main.tex
@@ -323,7 +323,7 @@ $$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 
-\subsection{Tachyonic Flickering Space-Time-Matter}
+\section{Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
