--- a/main.tex
+++ b/main.tex
@@ -505,7 +505,7 @@ density $\rho_{c}$.
 Much controversial is the Pioneer deceleration \cite{Nieto} $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
-\subsection{The Logic of Prospective Dimensional Analysis}
+\section{The Logic of Prospective Dimensional Analysis}
 
 Physical relations use principally physical quantities of the type $Q = M^{x} L^{y} T^{t}$, where
 the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, and where the exponents are
