--- a/main.tex
+++ b/main.tex
@@ -225,7 +225,7 @@ In the steady-state cosmology, such a repulsive force between galaxy groups is n
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
-\subsection{Cosmic Holography and Toponic Quantification}
+\section{Cosmic Holography and Toponic Quantification}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
